création du endpoint AuthenticationRestController, création de la page auth.html avec les formulaires de login et de register, configuration de la sécurité pour la page auth.html et la fonction AuthenticationServie.authenticate, ajout du test